--- a/ProyectoN1/InicioSesion/InicioSesion.html
+++ b/ProyectoN1/InicioSesion/InicioSesion.html
@@ -28,7 +28,7 @@
     </header>
     <div id="BloqueRegistro">
       <form action="">
-        <h1 style="font-family: 'Roboto Mono', monospace">Iniciar Sesion</h1>
+        <h1 style="font-family: 'Roboto Mono', monospace;text-shadow: 1px 1px 6px black;">Iniciar Sesion</h1>
 
         <label for="UserName">UserName</label><br />
         <input
