--- a/ProyectoN1/Registro/Registro.html
+++ b/ProyectoN1/Registro/Registro.html
@@ -28,7 +28,7 @@
     </header>
     <div id="BloqueRegistro">
       <form action="">
-        <h1 style="font-family: 'Roboto Mono', monospace;">Creacion De Cuenta</h1>
+        <h1 style="font-family: 'Roboto Mono', monospace;text-shadow: 1px 1px 6px black;">Creacion De Cuenta</h1>
 
         <label for="Nombre">Nombre</label><br />
         <input
