--- a/ProyectoN1/InicioSesion/InicioSesion.html
+++ b/ProyectoN1/InicioSesion/InicioSesion.html
@@ -23,7 +23,7 @@
         <a href="#" class="HeaderLinks">Precios</a>
         <a href="#" class="HeaderLinks">Contacto</a>
         <a href="#" class="HeaderLinks">Soporte</a>
-        <a href="#" class="HeaderLinks">Registrarse</a>
+        <a href="/ProyectoN1/Registro/Registro.html" class="HeaderLinks">Registrarse</a>
       </nav>
     </header>
     <div id="BloqueRegistro">
@@ -49,7 +49,7 @@
         <input type="submit" value="Entrar" class="BotonEnviar" /><br />
       </form>
       <footer id="BloqueRFooter">
-          <a href="#" id="Redireccion">Todavia no te Registraste?</a>
+          <a href="/ProyectoN1/Registro/Registro.html" id="Redireccion">Todavia no te Registraste?</a>
       </footer>
     </div>
     <footer>
