--- a/ProyectoN1/Registro/Registro.html
+++ b/ProyectoN1/Registro/Registro.html
@@ -23,7 +23,7 @@
         <a href="#" class="HeaderLinks">Precios</a>
         <a href="#" class="HeaderLinks">Contacto</a>
         <a href="#" class="HeaderLinks">Soporte</a>
-        <a href="#" class="HeaderLinks">Inicio De Sesion</a>
+        <a href="/ProyectoN1/InicioSesion/InicioSesion.html" class="HeaderLinks">Inicio De Sesion</a>
       </nav>
     </header>
     <div id="BloqueRegistro">
@@ -83,7 +83,7 @@
         <footer>
           <ul>
             <li id="URedireccion">
-              <a href="#" id="Redireccion">Ya te Registraste?</a>
+              <a href="/ProyectoN1/InicioSesion/InicioSesion.html" id="Redireccion">Ya te Registraste?</a>
             </li>
             <li>
               <input type="checkbox" id="Terminos" />
